--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">VTU DS Lab</string>
     <string name="no_internet_connection">No Internet Connection.</string>
     <string name="error_occurred">Some Error Occurred.</string>
+    <string name="copy">Copy</string>
 </resources>
