--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="no_internet_connection">No Internet Connection.</string>
     <string name="error_occurred">Some Error Occurred.</string>
     <string name="copy">Copy</string>
+    <string name="git_repo">Git Repo</string>
 </resources>
