--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VTU DS Lab</string>
+    <string name="app_name">VTU CS Lab</string>
     <string name="no_internet_connection">No Internet Connection.</string>
     <string name="error_occurred">Some Error Occurred.</string>
     <string name="copy">Copy</string>
