--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
     <string name="no_internet_connection">No Internet Connection.</string>
     <string name="error_occurred">Some Error Occurred.</string>
     <string name="copy">Copy</string>
-    <string name="git_repo">Git Repo</string>
+    <string name="git_repository">Git Repository</string>
+    <string name="drawer_open">Open Drawer</string>
+    <string name="drawer_close">Close Drawer</string>
+    <string name="rate_this_app">Rate this App!</string>
 </resources>
