--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="drawer_close">Close Drawer</string>
     <string name="rate_this_app">Rate this App!</string>
     <string name="refresh">Refresh</string>
+    <string name="content_index">Content Index</string>
 </resources>
