--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="back_button">Back Button</string>
     <string name="repository">Repository</string>
     <string name="exit">Exit</string>
+    <string name="privacy_policy">Privacy Policy</string>
 </resources>
