--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">VTU CS Lab</string>
     <string name="app_name_new">VTU CS Lab New Version</string>
-    <string name="no_internet_connection">No Internet Connection.\n\nThis content is not available offline yet, Kindly connect to the internet to sync this content locally.</string>
+    <string name="no_internet_connection_detailed">No Internet Connection.\n\nThis content is not available offline yet, Kindly connect to the internet to sync this content locally.</string>
+    <string name="no_internet_connection">No Internet Connection.</string>
     <string name="error_occurred">Some Error Occurred.</string>
     <string name="copy">Copy</string>
     <string name="git_repository">Git Repository</string>
